# paddle_ocr

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  NOTICE  README.md  README_zh.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
lib/: paddle_ocr.dart  paddle_ocr_method_channel.dart  paddle_ocr_platform_interface.dart  pp_ocr.dart  pp_ocr_ffi.dart
lib/src/: ocr_result.dart  pp_ocr_ffi_bindings.dart
test/: paddle_ocr_method_channel_test.dart  paddle_ocr_test.dart
windows/: .gitignore  CMakeLists.txt  debug_utils.h  ocr_engine.cpp  ocr_engine.h  paddle_ocr_plugin.cpp  paddle_ocr_plugin.h  paddle_ocr_plugin_c_api.cpp  pp_ocr_ffi.cpp  pp_ocr_ffi.h
windows/include/pp_ocr/: paddle_ocr_plugin_c_api.h
windows/test/: paddle_ocr_plugin_test.cpp
